[package]
name = "logz-example-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
incremental = false
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
log = "0.4.17"
logz = "0.1.1"


[build-dependencies]
bindgen = "0.59.2"
